# lexipy

./: README.md  pyproject.toml
lexipy/: __init__.py  lexer.py
tests/: test_lexer.py
