[tool.poetry]
name = "lexipy"
version = "0.1.0"
description = "A basic lexer for tokenizing a string of text"
authors = ["Edvinas Adomaitis <edvinasad7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
